# imageruler

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-ci.yml  ci-build.yml  cli_test.yml  pages.yml  release.yml
cli/: __main__.py
docs/: _config.yml  _toc.yml
docs/api/: imageruler.rst  regular_shapes.rst
docs/notebooks/: advanced.ipynb  examples.ipynb  simple_shapes.ipynb  to_designs.ipynb
imageruler/: __init__.py  __main__.py  cli.py  imageruler.py  regular_shapes.py  test_imageruler.py  test_ruler.py
notebooks/: examples.ipynb
reference_designs/: README.md
src/imageruler/: __init__.py  imageruler.py  regular_shapes.py
tests/: test_imageruler.py  test_regular_shapes.py
